fix alignment of icons & list items

--- a/src/styles/_features.scss
+++ b/src/styles/_features.scss
@@ -28,6 +28,8 @@
 
 .list-item-text {
     &>p {
-        margin-bottom: 0;
+        line-height: 1;
+        margin-bottom: 15px;
+        margin-top: 15px;
     }
 }
